# claude-voice-agent

./: .gitattributes  .gitignore  Idea.md  LICENSE  README.md  SETUP.md  VoiceAgent-debug.bat  VoiceAgent.bat  VoiceAppPath.example.md  VoiceAppPath.md  local_settings.json  pyproject.toml  setup.bat
docs/: architecture.md  setup.md  third-party-licenses.md
scripts/: VoiceAgent-debug.bat  VoiceAgent.bat  setup.bat
slides/: overview.html
src/voiceagent/: __init__.py
src/voiceagent/app/: __init__.py  assets.py  controller.py  main.py  qt_image.py  speech_item.py  speech_player.py  startup.py  synth_service.py  turn_worker.py
src/voiceagent/audio/: __init__.py  player.py
src/voiceagent/character/: __init__.py  expression_set.py  inspect_cli.py  mouth_map.py  psd_loader.py  renderer.py  slots.py
src/voiceagent/claude/: __init__.py  agent_client.py  events.py  model_registry.py  persona.py  session_manager.py  smoke.py
src/voiceagent/config/: __init__.py  characters.py  paths.py  settings.py
src/voiceagent/domain/: __init__.py  character.py  emotion.py  message.py  phoneme.py  utterance.py
src/voiceagent/text/: __init__.py  emotion_tagger.py  filter.py  segmenter.py
src/voiceagent/tts/: __init__.py  cevio_engine.py  engine_base.py  engine_manager.py  lipsync.py  smoke.py  voicevox_engine.py
src/voiceagent/ui/: __init__.py  character_view.py  chat_history.py  chat_overlay.py  input_bar.py  main_window.py
tests/: test_app.py  test_audio.py  test_cevio.py  test_character.py  test_claude.py  test_config.py  test_domain.py  test_lipsync.py  test_text.py
(+2 files in other folders)
