[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceagent"
version = "0.1.0"
description = "Claude Code の対話を読み上げるデスクトップキャラアプリ (小春六花 / 春日部つむぎ)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27",
    "psd-tools>=1.9",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pywin32>=306; sys_platform == 'win32'",
    "PySide6>=6.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
voiceagent = "voiceagent.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.coverage.run]
source = ["voiceagent"]
